fix icon alignment

--- a/bigbluebutton-html5/imports/ui/components/chat/chat-dropdown/styles.scss
+++ b/bigbluebutton-html5/imports/ui/components/chat/chat-dropdown/styles.scss
@@ -1,6 +1,6 @@
 @import "/imports/ui/stylesheets/variables/_all";
 
-$icon-offset: -.3em;
+$icon-offset: -.4em;
 $square-side-length: 1.56rem;
 
 .btn {
